--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="./assets/img/4geeks.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Excuse Generator</title>
 
     <!-- Fontawesome is our recomended library for icons -->
     <link
@@ -15,20 +16,20 @@
     />
   </head>
   <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
+    <div class="container d-flex justify-content-center">
+      <div class="card" id="card-body">
+        <div class="card-header">
+          <h1>Excuse Generator</h1>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" id="excuse">Click the buttom to generate an excuse</li>
+        </ul>
+        <div>
+          <button onclick="generateExcuse()" class="btn btn-primary d-flex justify-content-center" id="buttonExcuse">Click Me!</button>
+        </div>
+        
       </div>
-    </div>
-
+  </div>
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
     <script type="module" src="/app.js"></script>
   </body>
